feat(kmp): rewrite WebRTC API for multiplatform
Replace the Java API with a coroutine-first common Kotlin API backed by StateFlow and Flow. Keep the existing JNI engine for JVM and add a panic-contained C ABI for Kotlin/Native targets.\n\nUpdate shared integration tests, documentation, CI, and Maven Central publication for JVM, Linux, macOS, and Windows artifacts.\n\nBREAKING CHANGE: Remove the complete Java API and its source tree. Consumers must migrate to the Kotlin Multiplatform API.